public/css/style.css
html, body{
    background-image: url("webb.png");
    height: 100%;
}

.inline-btn{
    display: inline;
}

#articles{
    display: flex;
    flex-wrap: wrap;
}

div.card{
    margin: 1%;
}

div.row{
    margin-left: 5%;
    margin-top: 5%;
}

div#article{
    width: 100%;
}

.image-box{
    width: 100%; 
    height: 100%;
}

.video-box{
    width: 100%; 
    height: 255px;
}

.comments{
    width: 40%; 
    float: left;
}

.comments-card{
    width: 100%; 
}

#wrapper {
    width: 960px;
    margin-left: auto;
    margin-right: auto;
    padding-top: 30px;
}

.btn{
    margin: 10px;
    box-shadow: 3px 3px 5px rgb(51, 51, 51);
}

@media only screen and (max-width: 767px) {
    div.row{
        margin-left: 0%;
        margin-right: 2%;
        margin-top: 1%;
    }
    #wrapper{
        width: 85%;
    }
}

